fixing suggestion item click on mobile

--- a/client/src/components/HomePage/styles/Suggestion.css
+++ b/client/src/components/HomePage/styles/Suggestion.css
@@ -18,6 +18,7 @@
 }
 
 .Suggestion {
+	cursor: pointer;
 	padding: 5px;
 	border: solid 1px #ffffff;
 }
